RESOLVED FIXED70737
WebKit doesn't build with recent changes to libdispatch
https://bugs.webkit.org/show_bug.cgi?id=70737
Summary WebKit doesn't build with recent changes to libdispatch
Michael Saboff
Reported 2011-10-24 10:24:54 PDT
From <rdar://problem/10257323>. Changes in libdispatch and dispatch.h are breaking builds of webkit due to defines in Source/WebCore/platform/mac/MemoryPressureHandlerMac.mm. The solution is to move mac dependent code to WebKitSystemInterface.
Attachments
Proposed Papatch (6.77 KB, patch)
2011-10-24 11:11 PDT, Michael Saboff
ggaren: review+
Michael Saboff
Comment 1 2011-10-24 11:11:57 PDT
Created attachment 112215 [details] Proposed Papatch This patch depends on change set r98256 which is already checked in. That change set is the updated WebKitSystemInterface libraries.
Geoffrey Garen
Comment 2 2011-10-24 12:05:33 PDT
Comment on attachment 112215 [details] Proposed Papatch Minor quibble about the name "CreateVMPressureDispatchOnMainQueue": technically, you're creating a "dispatch source", not a "dispatch". I would have called this "CreateVMPressureDispatchSourceOnMainQueue".
Michael Saboff
Comment 3 2011-10-24 13:56:57 PDT
Note You need to log in before you can comment on or make changes to this bug.